src/assets/stylesheets/index.scss
/* ... */
.editor-large {
  width: 5.75rem;
  height: 5.75rem;
}
.editor-img {
  max-width: 100%;
  object-fit: cover;
  border-radius: 5px;
  box-shadow: 0 0 3px 3px rgba(140, 152, 164, 0.15);
}

.box-date {
  display: block;
  width: 60px;
  height: 60px;
  background: var(--bs-primary);
  color: #fff;
  border-radius: 50%;
  line-height: 60px;
  text-align: center;
  font-weight: 500;
}

//-- carousel & headline with background --//

.carousel-item {
  height: 400px;
}

.header-caption,
.carousel-caption {
  text-align: left;
  .h1,
  .h2,
  .h3,
  .h4,
  .h5,
  .h6 {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin: 0;
  }
  .h1,
  .h2,
  .h3,
  .h4,
  .h5,
  .h6 {
    span {
      padding: 10px 15px;
      margin: 3px 0;
    }
  }
}

// -- general badges -- //

.bg-middle-grey {
  color: var(--bs-secondary);
}

// -- general form-control -- //

.form-label {
  font-family: 'Fira Sans', sans-serif;
  color: var(--headline);
  margin-bottom: 0.5rem;
  font-size: 0.875rem;
}

.form-control {
  display: block;
  width: 100%;
  font-size: 0.9rem;
  font-weight: 500;
  line-height: 1.5;
  color: var(--bs-body-color);
  background-color: #fff;
  background-clip: padding-box;
  border: 0.0625rem solid rgba(33, 50, 91, 0.1);
  appearance: none;
  border-radius: 0.3125rem;
  transition:
    border-color 0.15s ease-in-out,
    box-shadow 0.15s ease-in-out;
}
.form-select {
  font-size: 0.9rem;
}
.form-control:disabled {
  background: rgba(255, 255, 255, 0.65);
  cursor: not-allowed;
}

.form-control:focus {
  color: #1e2022;
  background-color: #fff;
  border-color: rgba(140, 152, 164, 0.25);
  outline: 0;
  box-shadow: 0 0 1rem 0 rgba(140, 152, 164, 0.25);
}

.form-switch {
  padding-left: 3em;
}
.form-check-input {
  margin-top: 0.4em;
}
.form-check-input:checked {
  background-color: var(--bs-primary);
  border-color: var(--bs-primary);
}

/* btn + alignment
 =================================================================== */

.btn:empty {
  min-width: 50px;
}
.btn:empty:after {
  content: '______';
  color: transparent;
}

.btn-block .btn {
  width: 100%;
}

.nav {
  --bs-nav-link-color: var(--bs-primary);
  --bs-nav-link-hover-color: var(--bs-dark);
}

/* portal-only adaptions
 =================================================================== */

.portal-only {
  .navbar-brand {
    padding: 5px 15px;
  }
}

@media (max-width: 991px) {
  .navbar-nav {
    flex-direction: column-reverse;
  }
}

/* navbar
 =================================================================== */

.dropdown-item,
.nav-link {
  font-family: 'Fira Sans', sans-serif;
  font-weight: 500;
}

.navbar-brand {
  margin: 0 5px -10px 0;
  padding: 5px 15px;
  background: #fff;
  border-radius: 0 0 5px 5px;
  box-shadow: 0 0.375rem 2.5rem 0 rgba(140, 152, 164, 0.3);
  align-self: stretch;
  display: flex;
}

.navbar-brand-logo {
  margin: auto;
  max-width: 135px;
}
.navbar {
  padding: 0;
}
.navbar-nav.border-left .nav-item {
  border-left: 1px solid var(--border);
}
.navbar-nav.border-left .nav-item:first-child {
  border: none;
}
.navbar-collapse {
  display: flex;
  flex-flow: column;
  width: 100%;
}
.navbar-landing,
.navbar-meta,
.navbar-main {
  display: flex;
  width: 100%;
}
.navbar-meta {
  position: relative;
  .dropdown-menu {
    right: 0;
    left: auto;
  }
  .nav-link {
    font-size: 0.75rem;
    opacity: 0.9;
  }
  .nav-link:hover,
  .nav-link:focus {
    color: var(--bs-dropdown-link-hover-color);
    background-color: var(--bs-dropdown-link-hover-bg);
  }
  .nav-link.active,
  .nav-link:active {
    color: var(--bs-dropdown-link-active-color);
    text-decoration: none;
    background-color: var(--bs-dropdown-link-active-bg);
  }
  .nav-link.btn,
  .nav-link.btn:focus {
    border: none;
    background: var(--bs-primary);
    color: #fff;
    line-height: var(--bs-body-line-height);
    padding: var(--bs-nav-link-padding-y);
  }
  .nav-link.btn:hover {
    background: var(--bs-primary-lighten);
  }
  .nav-link.btn:active {
    background: var(--bs-primary-darken);
  }
  .profile-img {
    object-fit: cover;
    border-radius: 5px;
    width: 30px;
    height: 30px;
    margin: -5px 0 -5px -5px;
  }
}

.navbar-main {
  .nav-link {
    font-size: 1rem;
  }

  .form-control {
    font-size: 0.8rem;
    height: 100%;
  }
  .form-control:focus {
    background-color: var(--light-grey);
    box-shadow: 0 0 0 1px var(--bs-primary) inset;
  }
}

.navbar-meta {
  .form-control {
    font-size: 0.8rem;
    height: 100%;
    height: 37px;
  }
  .form-control:focus {
    background-color: var(--light-grey);
    box-shadow: 0 0 0 1px var(--bs-primary) inset;
  }
}

.navbar-landing {
  .nav-link {
    font-size: 1rem;
    font-weight: 500;
  }
}
// -- second line in items -- //

.nav-link-extended {
  display: inline-block;
  height: 36px;
  overflow: hidden;
  margin: -16px 0;
  span {
    display: block;
    line-height: 18px;
  }
  span.text-meta {
    color: var(--bs-primary);
    font-size: 9px;
    line-height: 12px;
    font-weight: 500;
    opacity: 0.9;
  }
}
/* ... */

